# ghostwire

./: README.md  aw-report.toml  ghostwire.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: collect.yml  publish.yml  render.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-0-pytest-setup.txt  task-1-roundtrip.txt  task-10-merge.txt  task-11-13-builders.txt  task-14-aggregate-e2e.txt  task-16-render.txt  task-17-cli-chain.txt  task-19-render-workflow.txt  task-2-fields.txt  task-3-categorize.txt  task-4-sanitize.txt  task-5-concurrency.txt  task-6-fixtures.txt  task-7-opencode.txt  task-8-snapshot.txt  task-9-cli-snapshot.txt
aw_report/: __init__.py  aggregate.py  aggregate_dashboard.py  aw_client.py  categorize.py  cli.py  concurrency.py  config.py  models.py  opencode.py  render_json.py  render_md.py  render_svg.py  sanitize.py  snapshot.py  utils.py
docs/: architecture.md  deployment.md  svg-data-binding.md
ghostwire/: __init__.py  aggregate_dashboard.py  categorize.py  cli.py  collect.py  concurrency.py  config.py  models.py  opencode.py  render_svg.py  server.py  snapshot.py  uploader.py
tests/: test_aggregate_dashboard.py  test_aggregate_e2e.py  test_cards.py  test_categorize.py  test_cli_aggregate_render.py  test_cli_snapshot.py  test_concurrency.py  test_dashboard_schema.py  test_fixtures_schema.py  test_host_snapshot_schema.py  test_merge_hosts.py  test_opencode.py  test_opencode_fork_dedupe.py  test_render_svg.py  test_sanitize.py  test_server.py  test_smoke.py  test_snapshot.py  test_timeline.py  test_uploader.py
(+21 files in other folders)
