[project]
name = "ghostwire"
version = "0.2.0"
description = "Local AW + OpenCode telemetry collector with private upload server."
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
ghostwire = "ghostwire.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
